New modifications in templates

--- a/prueba.html
+++ b/prueba.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="adaptive.css">
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -46,12 +46,9 @@
 	</div>
 	<div class="intensidades__content">
 		<p>Tus intensidades están marcadas por...</p>
-		<div class="intensidades__background">
-			<div id="first"><img src="images/gwen.jpg" alt="gwen stefani"><br><label>GWEN STEFANI</label></div>
-			<div id="second"><img src="images/justin.jpg" alt="justin bieber"><br><label>JUSTIN BIEBER</label></div>
-		</div>
+		<div><img src="images/gwen.jpg" alt="gwen stefani"></div>
+		<div><img src="images/justin.jpg" alt="justin bieber"></div>
 		<div class="div__modify"></div>
-		
 	</div>
 	<div class="estilo__content">
 		<p>La HELLMANN'S perfecta para tu estilo</p>
@@ -67,7 +64,7 @@
 		<p>HELLMANN'S te trae esta playlist creada en base a tus gustos musicales</p>
 		<p><strong>Dale play</strong> a esta playlist y disfruta con Hellmann's</p>
 		<iframe src="https://embed.spotify.com/?uri=spotify:user:spotify:playlist:3rgsDhGHZxZ9sB9DQWQfuf" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-		<p class="spotify"><a href="#"><i class="fa fa-spotify" aria-hidden="true"></i>GUARDAR EN TU PERFIL</a></div></p>
+		<p><a href="#"><i class="fa fa-spotify" aria-hidden="true"></i>GUARDA EN TU PERFIL</a></div></p>
 	</div>
 	</body>
 	<div class="main__footer">
