--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <html>
-	<head>
+<head>
 		<meta charset="UTF-8">
 		<title>Hellmann's Project</title>
 		<link rel="icon" href="http://www.hellmanns.com.ar//favicon.ico" type="image/x-icon" />
 		<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 		<link rel="stylesheet" href="style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	</head>
 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+
+		<script src="main.js" type="text/javascript"></script>
+	</head>
 	<body>
 		<div class="main__header">
-			<div class="main__header--logo">
-				<img src="images/hellmanns_logo.png" alt="logo">
-			</div>
-			<h2> MÁS QUE <strong>SABOR</strong>, SABOR <strong>HELLMANN'S</strong></h2>
-			<div class="main__header--spotify">
-				MUSIC BY
-				<i class="fa fa-spotify" aria-hidden="true"></i>
-			</div>
+		<div class="main__header--logo">
+			<img src="images/hellmanns_logo.png" alt="logo">
 		</div>
+		<h2> MÁS QUE <strong>SABOR</strong>, SABOR <strong>HELLMANN'S</strong></h2>
+		<div class="main__header--spotify">
+			MUSIC BY
+			<i class="fa fa-spotify" aria-hidden="true"></i>
+		</div>
+	</div>
 		<div class="main__image"></div>
 		<div class="main__content">
 			<h1>¿CUÁL ES TU HELLMANN'S?</h1>
